static/styles/post.css
@import url("root-colorsheme.css");
@import url("root-values.css");

h1, h2, h3, h4, h5, h6 {
	border-bottom: 2px solid var(--color-background-1);
	padding-top: 0.75rem;
	padding-bottom: 0.75rem;
}

p {
	text-align: justify;
	font-size: var(--font-text-1);
    line-height: var(--size-line-height);
    color: var(--color-foreground-1);
}

li {
	font-size: var(--font-text-1);
    line-height: var(--size-line-height);
	color: var(--color-foreground-1);
	margin-top: var(--size-paragraph-separation);
}

code {
	font-family: "Hack Nerd Font";
	font-size: var(--font-text-2);
    background-color: var(--color-background-2);
    color: var(--color-foreground-3);
    padding: 2px 4px;
    border-radius: var(--size-border-radius);
}

pre {
    background-color: var(--color-background-2);
    padding: 1rem 2rem 1rem 2rem;
    border-radius: var(--size-border-radius);
    white-space: pre-wrap;
    word-wrap: break-word;
}

blockquote {
	padding: 1rem 2rem 1rem 2rem;
	margin: 1rem 0rem 1rem 0rem;
	background-color: #BD93F940;
	border-radius: var(--size-border-radius);
}

hr {
	border: var(--size-border-radius);
	height: 2px;
	background-color: var(--color-background-1);
	margin: 2rem 0rem 2rem 0rem;
}

.main-post {
    margin: 4rem 0rem 4rem 0rem;
	width: 48rem;
    font-size: var(--font-text-2);
}

.post-header {
	text-align: center;
	font-size: var(--font-title-1);
	font-weight: 600;
	padding: 5rem 0rem 5rem 0rem;
	border: none;
}

.source-code {
	position: relative;
    overflow-x: auto;
    background-color: var(--color-background-2);
	line-height: var(--size-line-height);
    border-radius: var(--size-border-radius);
}

.button-to-clipboard {
	position: absolute;
	z-index: 1;
	top: 1rem;
	right: 1rem;
	background-color: var(--color-background-1);
	color: var(--color-foreground-1);
	border-radius: var(--size-border-radius);
	padding: 0.5rem;
	border: none;
	transition: var(--speed-transition-fast) ease;
	font-family: "Hack Nerd Font";
}

.button-to-clipboard:hover {
	background-color: var(--color-purple-2);
	cursor: pointer;
	transition: var(--speed-transition-fast) ease;
}

@media (max-width: 992px) {
	.main-post {
		width: 90%;
	}
}

@media (max-width: 600px) {
	.post-header {
		font-size: var(--font-title-2);
		padding: 2rem 0rem 2rem 0rem;
	}

	p {
		font-size: var(--font-text-2);
	}

	code {
		font-size: var(--font-text-3);
	}
}

